deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qcon-web
  template:
    metadata:
      labels:
        app: qcon-web
    spec:
      serviceAccountName: qcon-web-serviceaccount
      containers:
        - name: nginx
          volumeMounts:
            - name: shared-data
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
        - name: postgres
          image: postgres
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: qcon-web
          image: qcon-web
          volumeMounts:
            - name: shared-data
              mountPath: /var/www/html
          ports:
            - containerPort: 9000
              protocol: TCP
      volumes:
        - name: shared-data
          emptyDir: {}
